--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
