--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "first-app",
   "version": "0.1.0",
+  "homepage": "https://mserebryaakov.github.io/samurai-way-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -20,6 +21,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
